--- a/app/interact.html
+++ b/app/interact.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="Js/Winwheel.js"></script>
 	<script type="text/javascript" src="Js/custom.js"></script>
 	<script type="text/javascript" src="Js/tincan-min.js"></script>
-     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 	<style>
 		
 	</style>
